--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href="/">
+    <base href="/ng2-resume-demo/">
     <title>Demo for the &lt;ng2-resume&gt; component</title>
     <script src="dist/zone.min.js"></script>
     <script src="dist/system.js"></script>
-    <script src="config.js"></script>
   </head>
   <body>
 
     <demo></demo>
 
     <script>
-      System.import('dist/demo.min');
+      System.config({
+        baseURL: '/ng2-resume-demo'
+      });
+      System.import('dist/demo.min.js');
     </script>
   </body>
 </html>
